--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.15)
 cmake_policy(SET CMP0091 NEW)
 project(Deeplang)
 
-option(DEEPLANG_ANTLR4_GEN "Use Antlr4 generating parser codes" OFF)
+option(DEEPLANG_ANTLR4_GEN "Use Antlr4 generating parser codes" ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_BUILD_TYPE "Debug")
